create main.js and develop the logic of the game + complete CSS

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <header class="game-header">
         <h1>Memory Game of Leia</h1>
         <div class="game-stats">
-          <span class="attemps">Essais : <span class="attemps-count">0</span></span>
+          <span class="attempts">Essais : <span class="attempts-count">0</span></span>
         </div>
       </header>
 
@@ -23,7 +23,7 @@
 
       <!-- Footer with buttons -->
       <footer class="game-footer">
-        <button class="btn restart-btn">Nouvelle partie</button>
+        <button class="btn restart-btn" id="newGameBtn">Nouvelle partie</button>
       </footer>
     </div>
 
