refactor : split CSS into independant files / import main.css in html

--- a/index.html
+++ b/index.html
@@ -5,16 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Memory Game of Leia</title>
     <link rel="icon" href="img/favicon.ico" />
-    <link rel="stylesheet" href="style.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&family=Rajdhani:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/main.css" />
   </head>
 
   <body>
     <div class="game-container">
       <!-- header with title and score -->
       <header class="game-header">
-        <h1>Memory Game of Leia</h1>
+        <h1 >Memory Game of Leia</h1>
         <div class="game-stats">
-          <span class="attempts">Essais : <span class="attempts-count">0</span></span>
+          <span class="attempts neon-title">Essais : <span class="attempts-count">0</span></span>
         </div>
       </header>
 
@@ -23,7 +24,7 @@
 
       <!-- Footer with buttons -->
       <footer class="game-footer">
-        <button class="btn restart-btn" id="newGameBtn">Nouvelle partie</button>
+        <button class="restart-btn" id="newGameBtn">Nouvelle partie</button>
       </footer>
     </div>
 
