refactor : split JS into independant files / import main.js in index. html

--- a/index.html
+++ b/index.html
@@ -29,6 +29,6 @@
     </div>
 
     <!-- JS script -->
-    <script src="main.js"></script>
+    <script type="module" src="./js/main.js"></script>
   </body>
 </html>
